--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,6 +50,7 @@
         "xtr1common": "cpp",
         "xutility": "cpp",
         "stdio.h": "c",
-        "string": "cpp"
+        "string": "cpp",
+        "algorithm": "cpp"
     }
 }
