--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "java",
+            "name": "Main_04_008",
+            "request": "launch",
+            "mainClass": "Main_04_008",
+            "projectName": "Study_f8e3ae40"
+        },
+        {
             "type": "chrome",
             "request": "launch",
             "name": "localhost에 대해 Chrome 시작",
